--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -20,6 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "dev": "nodemon ./backend/App.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -43,6 +48,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+    "nodemon": "^2.0.20",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.1"
